; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_blame.c_read_ancestry.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_blame.c_read_ancestry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.commit_graft = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@the_repository = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @read_ancestry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_ancestry(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.strbuf, align 4
  %6 = alloca %struct.commit_graft*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32* @fopen_or_warn(i8* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %4, align 8
  %9 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %27, %13
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @strbuf_getwholeline(%struct.strbuf* %5, i32* %15, i8 signext 10)
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  br i1 %18, label %19, label %28

19:                                               ; preds = %14
  %20 = call %struct.commit_graft* @read_graft_line(%struct.strbuf* %5)
  store %struct.commit_graft* %20, %struct.commit_graft** %6, align 8
  %21 = load %struct.commit_graft*, %struct.commit_graft** %6, align 8
  %22 = icmp ne %struct.commit_graft* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load i32, i32* @the_repository, align 4
  %25 = load %struct.commit_graft*, %struct.commit_graft** %6, align 8
  %26 = call i32 @register_commit_graft(i32 %24, %struct.commit_graft* %25, i32 0)
  br label %27

27:                                               ; preds = %23, %19
  br label %14

28:                                               ; preds = %14
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @fclose(i32* %29)
  %31 = call i32 @strbuf_release(%struct.strbuf* %5)
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %28, %12
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32* @fopen_or_warn(i8*, i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @strbuf_getwholeline(%struct.strbuf*, i32*, i8 signext) #1

declare dso_local %struct.commit_graft* @read_graft_line(%struct.strbuf*) #1

declare dso_local i32 @register_commit_graft(i32, %struct.commit_graft*, i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
